# comfyui-zegr

./: README.md  __init__.py  nodes_zegr.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
